--- a/1.html
+++ b/1.html
@@ -37,7 +37,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="Images/Rahul jpeg (1).png">
+                    <img src="Rahul jpeg (1).png">
                 </div>
 
                 <div class="about-col-2">
@@ -120,7 +120,7 @@
             <h1 class="sub-title">Certifications</h1>
             <div class="work-list">
                 <div class="work">
-                    <img src="Images/CyberSecurity.jpeg">
+                    <img src="CyberSecurity.jpeg">
                     <div class="layer">
                         <h3>Udemy</h3>
                         <p>Ethical Hacking Certificate</p>
@@ -129,7 +129,7 @@
 
                 </div>
                 <div class="work">
-                    <img src="Images/Python.png">
+                    <img src="Python.png">
                     <div class="layer">
                         <h3>Coursera</h3>
                         <p>Python Certificate</p>
@@ -137,7 +137,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="Images/css_js.png">
+                    <img src="css_js.png">
                     <div class="layer">
                         <h3>Udemy</h3>
                         <p>CSS and JavaScript Certificate</p>
@@ -161,7 +161,7 @@
                         <a href=""><i class="fa-brands fa-instagram"></i></a>
                         <a href="linkedin.com/in/megavathrahul"><i class="fa-brands fa-linkedin"></i></a>
                     </div>
-                    <a href="images/Resume.pdf" download class="btn btn2">Download Resume</a>
+                    <a href="Resume.pdf" download class="btn btn2">Download Resume</a>
                 </div>
                 <div class="contact-right">
                     <form name="submit-to-google-sheet">
